--- a/lightning_cnn_dev.ipynb
+++ b/lightning_cnn_dev.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPkaykviwyg0xwVD/6odukY",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/protovici/PyTorch_Lightning/blob/main/lightning_cnn_dev.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -36,5 +19,29 @@
       "outputs": [],
       "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPkaykviwyg0xwVD/6odukY",
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.10 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "57c232428e627ab873b9fb9e5012d6a94660b298a8c8f1f90ef0e13eb6199b14"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
