--- a/lightning_cnn_dev.ipynb
+++ b/lightning_cnn_dev.ipynb
@@ -1,14 +1,40 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNnRjMbRFmFMWBrMl0bPcAB",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/protovici/PyTorch_Lightning/blob/main/lightning_cnn_dev.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/protovici/PyTorch_Lightning_Dev/blob/main/lightning_cnn_dev.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## PyTorch Lightning Dev | page 38 Start"
+      ],
+      "metadata": {
+        "id": "5zclBag9_qS-"
+      }
     },
     {
       "cell_type": "code",
@@ -17,31 +43,13 @@
         "id": "-F0Phar2DRii"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "!pip install torch==1.10.0 torchvision==0.11.1 torchtext==0.11.0 torchaudio==0.10.0 --quiet\n",
+        "!pip install pytorch-lightning==1.5.2 --quiet\n",
+        "!pip install seaborn==0.11.2\n",
+        "!pip install numpy\n",
+        "!pip install pandas==1.3.5"
+      ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "authorship_tag": "ABX9TyPkaykviwyg0xwVD/6odukY",
-      "include_colab_link": true,
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "display_name": "Python 3.9.10 64-bit",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.9.10"
-    },
-    "vscode": {
-      "interpreter": {
-        "hash": "57c232428e627ab873b9fb9e5012d6a94660b298a8c8f1f90ef0e13eb6199b14"
-      }
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
