--- a/lightning_cnn_dev.ipynb
+++ b/lightning_cnn_dev.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOBLGYZ2e2R0bmvnvzRI33k",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/protovici/PyTorch_Lightning_Dev/blob/main/lightning_cnn_dev.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,27 +12,27 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Building a CNN model for image recognition | Page 38"
-      ],
       "metadata": {
         "id": "QwY6s1DHZ1DO"
-      }
+      },
+      "source": [
+        "## Building a CNN model for image recognition | Page 38"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "-F0Phar2DRii",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "-F0Phar2DRii",
         "outputId": "53764de0-8bb1-4e50-d90e-be7f660f5407"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[K     |██████████████████████████████▎ | 834.1 MB 1.3 MB/s eta 0:00:38tcmalloc: large alloc 1147494400 bytes == 0x663f6000 @  0x7fb19e7d2615 0x58ead6 0x4f355e 0x4d222f 0x51041f 0x5b4ee6 0x58ff2e 0x510325 0x5b4ee6 0x58ff2e 0x50d482 0x4d00fb 0x50cb8d 0x4d00fb 0x50cb8d 0x4d00fb 0x50cb8d 0x4bac0a 0x538a76 0x590ae5 0x510280 0x5b4ee6 0x58ff2e 0x50d482 0x5b4ee6 0x58ff2e 0x50c4fc 0x58fd37 0x50ca37 0x5b4ee6 0x58ff2e\n",
             "\u001b[K     |████████████████████████████████| 881.9 MB 18 kB/s \n",
@@ -95,6 +78,46 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pKpJOZkwaDfZ",
+        "outputId": "d91a47e4-afd5-4a48-bc2d-62baea3f8bcd"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "INFO:pytorch_lightning.utilities.seed:Global seed set to 42\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "----------------------ENVIRONMENT SET-UP WITH DESCRIPTIONS----------------------\n",
+            "\n",
+            "Location of inbound data:  /content/data/in\n",
+            "Location of outbound data:  /content/data/out\n",
+            "Versions:  [('torchvision', '0.13.1+cu113'), ('torch', '1.12.1+cu113'), ('seaborn', '0.11.2'), ('Pillow', '7.1.2'), ('pandas', '1.3.5'), ('numpy', '1.21.6'), ('matplotlib', '3.2.2')]\n",
+            "Device(s) to Utilize:  cpu\n",
+            "Is Torch GPU Avaliable?:  False\n",
+            "# of Devices Found:  1.10.0+cu102\n",
+            "Torch version: 1.10.0+cu102\n",
+            "Pytorch ligthening version: 1.5.2\n",
+            "\n",
+            "------If NVIDIA-SMI is not found, then CUDA isnt available on this device:------\n",
+            "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running.\n",
+            "\n",
+            "\n",
+            "Clear Torch Cuda Memory:  None\n",
+            "-------------------ENVIRONMENT IS COMPLETE & STAGED CORRECTLY-------------------\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import shutil\n",
@@ -180,56 +203,40 @@
         "print()\n",
         "print(f\"Clear Torch Cuda Memory: \", torch.cuda.empty_cache())\n",
         "print(f'{lable_3:-^80}')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pKpJOZkwaDfZ",
-        "outputId": "d91a47e4-afd5-4a48-bc2d-62baea3f8bcd"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "INFO:pytorch_lightning.utilities.seed:Global seed set to 42\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "----------------------ENVIRONMENT SET-UP WITH DESCRIPTIONS----------------------\n",
-            "\n",
-            "Location of inbound data:  /content/data/in\n",
-            "Location of outbound data:  /content/data/out\n",
-            "Versions:  [('torchvision', '0.13.1+cu113'), ('torch', '1.12.1+cu113'), ('seaborn', '0.11.2'), ('Pillow', '7.1.2'), ('pandas', '1.3.5'), ('numpy', '1.21.6'), ('matplotlib', '3.2.2')]\n",
-            "Device(s) to Utilize:  cpu\n",
-            "Is Torch GPU Avaliable?:  False\n",
-            "# of Devices Found:  1.10.0+cu102\n",
-            "Torch version: 1.10.0+cu102\n",
-            "Pytorch ligthening version: 1.5.2\n",
-            "\n",
-            "------If NVIDIA-SMI is not found, then CUDA isnt available on this device:------\n",
-            "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running.\n",
-            "\n",
-            "\n",
-            "Clear Torch Cuda Memory:  None\n",
-            "-------------------ENVIRONMENT IS COMPLETE & STAGED CORRECTLY-------------------\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "oZo1FwVYbiSw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOBLGYZ2e2R0bmvnvzRI33k",
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.10 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "57c232428e627ab873b9fb9e5012d6a94660b298a8c8f1f90ef0e13eb6199b14"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
