--- a/lightning_cnn_dev.ipynb
+++ b/lightning_cnn_dev.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1yVxJN3ZBhN5IE79bbO86O0mItrxihhIc",
-      "authorship_tag": "ABX9TyNYtPgtiYyxZb+SGdjTBgMh",
+      "authorship_tag": "ABX9TyNquaxHCha7MZ+jhQ3OxSCG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -360,10 +360,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Page 44 to start"
+      ],
+      "metadata": {
+        "id": "C5iONvcU48cS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "lxdY3aoTpVI4"
+        "id": "O9XANsQN5AaQ"
       },
       "execution_count": null,
       "outputs": []
